<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ZoneState" Id="{c8f9e4a5-d6b7-4728-a19c-9e7f6d5c4b3a}">
    <Declaration><![CDATA[TYPE ST_ZoneState :
STRUCT
	zone_id : T_MaxString;
	active : BOOL;
	start_time : FILETIME;
	executor_uid : T_MaxString;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>